@@ -2226,6 +2226,20 @@ $wgMessageStructure = array(
 		'watchlisttools-edit',
 		'watchlisttools-raw',
 	),
+	'iranian-dates' => array(
+		'iranian-calendar-m1',
+		'iranian-calendar-m2',
+		'iranian-calendar-m3',
+		'iranian-calendar-m4',
+		'iranian-calendar-m5',
+		'iranian-calendar-m6',
+		'iranian-calendar-m7',
+		'iranian-calendar-m8',
+		'iranian-calendar-m9',
+		'iranian-calendar-m10',
+		'iranian-calendar-m11',
+		'iranian-calendar-m12',
+	),
 );
 /** Comments for each block */
 $wgBlockComments = array(
